# pysat

./: #test_url#  .#test_url  .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  .zenodo.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Pipfile  Pressurefabricator.com  README.md  __init__.py  _custom.py  _files.py  _instrument.py  _meta.py  acknowledgements.txt  custom.py  description.txt  ecosystem.txt  files.py  instrument.py  lint.sh  meta.py  orbits.py  pyproject.toml  pytest.ini  requirements.txt  set_ga_dir.py  setup.cfg  setup.py  temp.py  test_ix.py  test_requirements.txt  utils.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: docs.yml  main.yml  pip_rc_install.yml  stats.yml
demo/: ICON_demo.ipynb  cnofs_vefi_dc_b_orbit_plots.py  cosmic_and_ivm_demo.py  ssnl_occurrence_by_orbit.py
docs/: CHANGELOG.md  CHANGELOG.rst  Makefile  ]\  api.rst  citing.rst  conf.py  data_templates.rst  dependency.rst  ecosystem.rst  examples.rst  faq.rst  funding.rst  index.rst  installation.rst  introduction.rst  new_instrument.rst  quickstart.rst  release_notes.rst  requirements.txt  roadmap.rst  supported_instruments.rst  tutorial.rst  tutorial_basics.rst  tutorial_custom.rst  tutorial_flow.rst  tutorial_full_independence.rst  tutorial_independence.rst  tutorial_iteration.rst  tutorial_load.rst  tutorial_orbit.rst  tutorial_parameters.rst  tutorial_verbosity.rst
docs/analysis/: pysatMissions.rst  pysatModels.rst  pysatSeasons.rst  pysatSpaceWeather.rst
docs/devel/: pysatEcosystem_Template.rst  pysatTutorials.rst
docs/examples/: example_orbit.rst
docs/instruments/: general_instruments.rst  pysatCDAAC.rst  pysatIncubator.rst  pysatMadrigal.rst  pysatMissions.rst  pysatModels.rst  pysatNASA.rst  pysatSpaceWeather.rst  testing_instruments.rst
docs/tutorial/: tutorial_analysis.rst  tutorial_basics.rst  tutorial_constellation.rst  tutorial_custom.rst  tutorial_files.rst  tutorial_full_independence.rst  tutorial_independence.rst  tutorial_iteration.rst  tutorial_load.rst  tutorial_orbit.rst  tutorial_parameters.rst  tutorial_periodic_analysis.rst  tutorial_v3_upgrade.rst  tutorial_verbosity.rst  tutorial_writing_files.rst
instruments/: __init__.py  cnofs_vefi.py  cosmic.py  testing.py  vefi_dc_b.py
pysat/: __init__.py  _constellation.py  _custom.py  _files.py  _instrument.py  _meta.py  _orbits.py  _params.py  _queue.py  citation.txt  conf.py  coords.py  files.py  model_utils.py  models.py  utils.py  version.txt
pysat/constellations/: .test_add1.py.swp  __init__.py  de2.py  icon.py  single_test.py  test_add1.py  test_add2.py  test_add_opposite.py  test_add_similar.py  test_diff.py  test_diff2.py  test_diff_same.py  test_diff_similar.py  test_diff_small.py  testing.py  testing_empty.py  testing_partial.py
pysat/demo/: ssnl_occurrence_by_orbit.py
pysat/docs/: Makefile  conf.py  index.rst  make.bat
pysat/docs/_build/doctrees/: environment.pickle  index.doctree
pysat/docs/_build/latex/: PysatProject.aux  PysatProject.fdb_latexmk  PysatProject.fls  PysatProject.ilg  PysatProject.tex  sphinxhighlight.sty
pysat/instruments/: .#sw_f107.py  __init__.py  champ_star.py  cnofs_ivm.py  cnofs_plp.py  cnofs_vefi.py  cosmic2013_gps.py  cosmic_gps.py  de2_idm.py  de2_lang.py  de2_nacs.py  de2_rpa.py  de2_wats.py  demeter_iap.py  demeter_methods.py  dmsp_ivm.py  dmsp_ivm_ephem.py  icon_euv.py  icon_fuv.py  icon_ivm.py  icon_mighti.py  iss_fpmu.py  jro_isr.py  madrigal_methods.py  madrigal_pandas.py  nasa_CDAWeb_template.py  nasa_cdaweb_methods.py  netcdf_pandas.py  omni_hro.py  pysat_ndtesting.py  pysat_netcdf.py  pysat_sgp4.py  pysat_testadd.py  pysat_testadd1.py  pysat_testadd2.py  pysat_testadd3.py  pysat_testadd4.py  pysat_testing.py  pysat_testing2d.py  pysat_testing2d_xarray.py  (+24 more)
pysat/instruments/methods/: __init__.py  cnofs.py  de2.py  demeter.py  general.py  icon.py  madrigal.py  nasa_cdaweb.py  sw.py  testing.py
pysat/instruments/templates/: __init__.py  madrigal_pandas.py  netcdf_pandas.py  template_cdaweb_instrument.py  template_instrument.py
pysat/ssnl/: __init__.py  _core.py  avg.py  median2D.py  occur_prob.py  plot.py
pysat/testing/: test_ncdf.nc
pysat/testing2d/: test_ncdf.nc
pysat/tests/: __init__.py  ci_test_class.py  cindi_ivm_meta.txt  instrument_test_class.py  instrument_tests.py  registration_test_class.py  test_avg.py  test_constellation.py  test_coords.py  test_custom.py  test_files.py  test_ftp_instruments.py  test_icon_ivm.py  test_instrument.py  test_instrument_custom.py  test_instrument_index.py  test_instrument_listgen.py  test_instrument_padding.py  test_instruments.py  test_meta.py  test_meta_header.py  test_meta_labels.py  test_methods_cdaweb.py  test_methods_general.py  test_methods_icon.py  test_methods_testing.py  test_model_utils.py  test_omni_hro.py  test_orbits.py  test_params.py  test_pyglow.py  test_registry.py  test_ssnl_ave.py  test_ssnl_occur_prob.py  test_ssnl_plot.py  test_stats.py  test_sw.py  test_time.py  test_utils.py  test_utils_coords.py  (+6 more)
pysat/tests/classes/: cls_ci.py  cls_instrument_access.py  cls_instrument_integration.py  cls_instrument_iteration.py  cls_instrument_library.py  cls_instrument_property.py  cls_registration.py
pysat/tests/test_data/: dst2000.txt
pysat/tests/test_data/sw/f107/45day/: f107_45day_2019-03-16.txt
pysat/tests/test_data/sw/f107/all/: f107_1947_to_2019-03-17.txt
pysat/tests/test_data/sw/f107/daily/: f107_daily_2019-03-16.txt
pysat/tests/test_data/sw/f107/forecast/: f107_forecast_2019-03-16.txt
pysat/tests/test_data/sw/kp/: kp1902.tab
pysat/tests/test_data/sw/kp/forecast/: kp_forecast_2019-03-16.txt  kp_forecast_2019-03-18.txt
pysat/tests/test_data/sw/kp/recent/: kp_recent_2019-03-16.txt  kp_recent_2019-03-18.txt
pysat/utils/: __init__.py  _core.py  coords.py  files.py  io.py  misc.py  registry.py  stats.py  testing.py  time.py  user_modules.py
ssnl/: __init__.py  occur_prob.py
tests/: test_custom.py  test_instrument.py  test_orbits.py
