[metadata]
name = pysat
url = https://github.com/rstoneback/pysat
author = Russell Stoneback
author_email = rstoneba@utdallas.edu
description = Supports science data analysis across measurement platforms
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD

classifiers =
  Development Status :: 4 - Beta

  Intended Audience :: Science/Research
  Topic :: Scientific/Engineering :: Astronomy
  Topic :: Scientific/Engineering :: Physics
  Topic :: Scientific/Engineering :: Atmospheric Science

  License :: OSI Approved :: BSD License

  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6


[options]
include_package_data = True
install_requires =
  pandas

[options.extras_require]
tests = pysatCDF; nose; pytest; pytest-cov; coveralls; flake8; numpy; scipy; netCDF4; statsmodels; matplotlib
