[metadata]
name = pysat
version = file: pysat/version.txt
url = https://github.com/pysat/pysat
author = Russell Stoneback, et al.
author_email = pysat.developers@gmail.com
description = 'Supports science analysis across disparate data platforms'
keywords =
  pysat
  ionosphere
  atmosphere
  thermosphere
  magnetosphere
  heliosphere
  observations
  models
  space
  satellites
  analysis
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Science/Research
  Topic :: Scientific/Engineering :: Astronomy
  Topic :: Scientific/Engineering :: Physics
  Topic :: Scientific/Engineering :: Atmospheric Science
  License :: OSI Approved :: BSD License
  Natural Language :: English
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Operating System :: MacOS :: MacOS X
  Operating System :: POSIX :: Linux
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

  [options]
  python_requires = >= 3.5
  setup_requires =
    setuptools >= 38.6
    pip >= 10
  include_package_data = True
  zip_safe = False
  packages = find:
  install_requires = file: requirements.txt


[coverage:report]
omit =
  */instruments/templates/

[flake8]
max-line-length = 80

[tool:pytest]
markers =
    all_inst: tests all instruments
    download: tests for downloadable instruments
    no_download: tests for instruments without download support
    first: first tests to run
    second: second tests to run
flake8-ignore =
  *.py W503
  docs/conf.py ALL
  pysat/__init__.py E402 F401
  pysat/instruments/methods/__init__.py F401
  pysat/utils/__init__.py F401
