[metadata]
name = pysat
version = file: pysat/version.txt
url = https://github.com/pysat/pysat
author = Russell Stoneback, et al.
author_email = pysat.developers@gmail.com
description = 'Supports science analysis across disparate data platforms'
keywords =
  pysat
  ionosphere
  atmosphere
  thermosphere
  magnetosphere
  heliosphere
  observations
  models
  space
  satellites
  analysis
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Science/Research
  Topic :: Scientific/Engineering :: Astronomy
  Topic :: Scientific/Engineering :: Physics
  Topic :: Scientific/Engineering :: Atmospheric Science
  License :: OSI Approved :: BSD License
  Natural Language :: English
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Operating System :: MacOS :: MacOS X
  Operating System :: POSIX :: Linux
  Operating System :: Microsoft :: Windows
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6.8
setup_requires = setuptools >= 38.6; pip >= 10
include_package_data = True
zip_safe = False
packages = find:
install_requires = dask
		netCDF4
		numpy
		pandas
		portalocker
		pytest
		scipy
		toolz
		xarray

[coverage:report]
omit =
  */instruments/templates/*

[flake8]
max-line-length = 80
ignore =
  D200
  D202
  W503
  pysat/__init__.py E402 F401
  pysat/instruments/methods/__init__.py F401
  pysat/utils/__init__.py F401

[tool:pytest]
markers =
    all_inst: tests all instruments
    download: tests for downloadable instruments
    no_download: tests for instruments without download support
    load_options: tests for instruments including optional load kwargs
    first: first tests to run
    second: second tests to run
